--- a/package.json
+++ b/package.json
@@ -7,31 +7,32 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "start": "concurrently 'npm run build' 'nodemon ./bin/www' "
+    "start": " npm run build && cross-env NODE_ENV=productionnode ./bin/www "
   },
   "dependencies": {
     "concurrently": "^3.1.0",
+    "jade": "^1.11.0",
     "markdown": "^0.5.0",
     "to-markdown": "^3.0.3",
-    "vue": "^2.1.0",
-    "vue-resource": "^1.0.3"
+    "vue": "^2.1.10",
+    "vue-resource": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "vue-loader": "^10.0.0",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.9",
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.16.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.26.1",
+    "debug": "^2.6.0",
+    "express": "^4.14.1",
+    "file-loader": "^0.10.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "vue-loader": "^10.1.2",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.1.0-beta.9"
   }
 }
