--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "start": "node production.config.js "
   },
   "dependencies": {
-    "concurrently": "^3.1.0",
-    "jade": "^1.11.0",
+    "compression": "^1.6.2",
     "markdown": "^0.5.0",
     "pm2": "^2.3.0",
-    "to-markdown": "^3.0.3",
     "vue": "^2.1.10",
     "vue-resource": "^1.1.0"
   },
@@ -33,7 +31,6 @@
     "serve-favicon": "~2.3.0",
     "vue-loader": "^10.1.2",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.1.0-beta.9"
+    "webpack": "^2.2.0"
   }
 }
