--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "debug": "^2.6.0",
     "express": "^4.14.1",
     "file-loader": "^0.10.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "vue-loader": "^10.1.2",
+    "morgan": "^1.8.1",
+    "serve-favicon": "^2.4.1",
+    "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0"
   }
