--- a/package.json
+++ b/package.json
@@ -9,28 +9,31 @@
     "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules",
     "start": "node production.config.js "
   },
+  "engines": {
+    "node": ">=8.1.4"
+  },
   "dependencies": {
-    "compression": "^1.6.2",
+    "compression": "^1.7.0",
     "markdown": "^0.5.0",
-    "pm2": "^2.3.0",
-    "vue": "^2.1.10",
-    "vue-resource": "^1.1.0"
+    "pm2": "^2.5.0",
+    "vue": "^2.4.1",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.0.0",
     "body-parser": "^1.16.0",
     "cookie-parser": "~1.4.3",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.0",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
     "debug": "^2.6.0",
     "express": "^4.14.1",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.1",
-    "vue-loader": "^12.0.2",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.2.0"
+    "vue-loader": "^12.2.2",
+    "vue-template-compiler": "^2.4.1",
+    "webpack": "^3.2.0"
   }
 }
