--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Adam Siwiec <brickmaster01@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack  && nodemon ./bin/www ",
+    "dev": "webpack --mode development && nodemon ./bin/www ",
     "build": "cross-env NODE_ENV=production webpack -p --progress --hide-modules",
     "start": "node production.config.js "
   },
@@ -15,6 +15,7 @@
   "dependencies": {
     "compression": "^1.7.0",
     "markdown": "^0.5.0",
+    "npm": "^6.0.1",
     "pm2": "^2.5.0",
     "vue": "^2.4.1",
     "vue-resource": "^1.3.4"
@@ -27,13 +28,14 @@
     "cookie-parser": "~1.4.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "debug": "^2.6.0",
+    "debug": "^3.1.0",
     "express": "^4.14.1",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.11",
     "morgan": "^1.8.1",
     "serve-favicon": "^2.4.1",
-    "vue-loader": "^12.2.2",
+    "vue-loader": "^15.1.0",
     "vue-template-compiler": "^2.4.1",
-    "webpack": "^3.2.0"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   }
 }
